# ITCH-market-data-engine

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
examples/: sample_1mb.itch  sample_320bytes.itch  simple-example.json
lib/: CMakeLists.txt
lib/include/: Byteswap.hpp  CaptureMessage.hpp  ConfigParser.hpp  Engine.hpp  FeedHandler.hpp  ItchEnums.hpp  ItchMessages.hpp  ItchParser.hpp  Printer.hpp  Simulator.hpp
lib/src/: ConfigParser.cpp  Engine.cpp  FeedHandler.cpp  Simulator.cpp  main.cpp
lib/tests/: CMakeLists.txt  TestEngine.cpp  TestParser.cpp
